[gd_scene load_steps=32 format=3 uid="uid://b8dhl8bkqruhs"]

[ext_resource type="Script" path="res://enemies/enemy_eye.gd" id="1_qa1g2"]
[ext_resource type="Texture2D" uid="uid://cftr1ocg6q8tx" path="res://assets/enemies/enemy1-Sheet.png" id="2_67bjt"]
[ext_resource type="Texture2D" uid="uid://cyks626ojs2bj" path="res://assets/lights/light.png" id="2_vk54n"]
[ext_resource type="PackedScene" uid="uid://cwipuv3723neg" path="res://player/character_components/hurtBox.tscn" id="3_roh5r"]
[ext_resource type="PackedScene" uid="uid://bonoh8tvsqaxf" path="res://player/character_components/shooter.tscn" id="4_h106r"]
[ext_resource type="PackedScene" uid="uid://dlubxqu2bs41o" path="res://player/character_components/health.tscn" id="5_iguai"]
[ext_resource type="AudioStream" uid="uid://7rcbqgj8ef05" path="res://assets/sounds/lasershoot.mp3" id="6_qkoss"]
[ext_resource type="AudioStream" uid="uid://cfhmmgy2nxoqc" path="res://assets/sounds/vanishing.mp3" id="7_q6xr5"]
[ext_resource type="AudioStream" uid="uid://fwuqbgdfquwx" path="res://assets/sounds/blood.mp3" id="8_grqc0"]
[ext_resource type="AudioStream" uid="uid://coo4qp2kipcyp" path="res://assets/sounds/clap.mp3" id="9_40nbb"]
[ext_resource type="AudioStream" uid="uid://duf5k5mapu0oj" path="res://assets/sounds/hit.mp3" id="10_wci6s"]
[ext_resource type="PackedScene" uid="uid://cppg4wlj741eq" path="res://enemies/components/healthBar.tscn" id="11_mr6mk"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4hdjc"]
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ix582"]
height = 36.0

[sub_resource type="Animation" id="Animation_xo2l5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [],
"times": PackedFloat32Array()
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_fhvg4"]
resource_name = "attack_down"
length = 0.7
step = 0.1
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.126905,
"start_offset": 0.0,
"stream": ExtResource("6_qkoss")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_execute_attack"
}, {
"args": [],
"method": &"prepare_attack"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [220, 221, 222, 223, 224, 225]
}

[sub_resource type="Animation" id="Animation_fe63q"]
resource_name = "attack_left"
length = 0.7
step = 0.1
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.126905,
"start_offset": 0.0,
"stream": ExtResource("6_qkoss")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_execute_attack"
}, {
"args": [],
"method": &"prepare_attack"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [160, 161, 162, 163, 164, 165]
}

[sub_resource type="Animation" id="Animation_gec7l"]
resource_name = "attack_right"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [200, 201, 202, 203, 204, 205]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.128842,
"start_offset": 0.0,
"stream": ExtResource("6_qkoss")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_execute_attack"
}, {
"args": [],
"method": &"prepare_attack"
}]
}

[sub_resource type="Animation" id="Animation_lxcgt"]
resource_name = "attack_up"
length = 0.7
step = 0.1
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.126905,
"start_offset": 0.0,
"stream": ExtResource("6_qkoss")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 0.7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"_execute_attack"
}, {
"args": [],
"method": &"prepare_attack"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [180, 181, 182, 183, 184, 185]
}

[sub_resource type="Animation" id="Animation_g5ehu"]
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [320, 321, 322, 323, 324, 325, 326, 327, 328, 329, 330, 331, 332, 333, 334, 335, 336, 337, 338, 339]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 1.5403,
"stream": ExtResource("7_q6xr5")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_grqc0")
}, {
"end_offset": 0.715479,
"start_offset": 0.0,
"stream": ExtResource("8_grqc0")
}],
"times": PackedFloat32Array(-0.0355844, 0, 0.6)
}
tracks/1/use_blend = true
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_40nbb")
}, {
"end_offset": 0.572117,
"start_offset": 0.41215,
"stream": ExtResource("7_q6xr5")
}],
"times": PackedFloat32Array(0, 0.605114)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_56sli"]
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_grqc0")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0314822,
"stream": ExtResource("10_wci6s")
}],
"times": PackedFloat32Array(0.0314822)
}
tracks/2/use_blend = true

[sub_resource type="Animation" id="Animation_3ojl4"]
resource_name = "idle_down"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [140, 141, 142, 143, 144, 145, 146, 147, 148]
}

[sub_resource type="Animation" id="Animation_1hk04"]
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [80, 81, 82, 83, 84, 85, 86, 87, 88]
}

[sub_resource type="Animation" id="Animation_1nsjn"]
resource_name = "idle_right"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [120, 121, 122, 123, 124, 125, 126, 127, 128]
}

[sub_resource type="Animation" id="Animation_3jeun"]
resource_name = "idle_up"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [100, 101, 102, 103, 104, 105, 106, 107, 108]
}

[sub_resource type="Animation" id="Animation_h7p8g"]
resource_name = "walk_down"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 64, 65]
}

[sub_resource type="Animation" id="Animation_goxk4"]
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_eq8sx"]
resource_name = "walk_right"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45]
}

[sub_resource type="Animation" id="Animation_01x86"]
resource_name = "walk_up"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jtf3n"]
_data = {
"RESET": SubResource("Animation_xo2l5"),
"attack_down": SubResource("Animation_fhvg4"),
"attack_left": SubResource("Animation_fe63q"),
"attack_right": SubResource("Animation_gec7l"),
"attack_up": SubResource("Animation_lxcgt"),
"death": SubResource("Animation_g5ehu"),
"hit": SubResource("Animation_56sli"),
"idle_down": SubResource("Animation_3ojl4"),
"idle_left": SubResource("Animation_1hk04"),
"idle_right": SubResource("Animation_1nsjn"),
"idle_up": SubResource("Animation_3jeun"),
"walk_down": SubResource("Animation_h7p8g"),
"walk_left": SubResource("Animation_goxk4"),
"walk_right": SubResource("Animation_eq8sx"),
"walk_up": SubResource("Animation_01x86")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_37lhs"]
size = Vector2(50, 10)

[node name="EnemyEye" type="CharacterBody2D"]
y_sort_enabled = true
texture_filter = 3
collision_layer = 2048
collision_mask = 31
wall_min_slide_angle = 0.0
script = ExtResource("1_qa1g2")
speed = 32

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_67bjt")
offset = Vector2(0, -16)
hframes = 20
vframes = 17
region_rect = Rect2(133, 163, 26, 40)

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(-7, -12)
shape = SubResource("CapsuleShape2D_4hdjc")

[node name="HurtBox" parent="." node_paths=PackedStringArray("health") instance=ExtResource("3_roh5r")]
position = Vector2(0, -15)
collision_layer = 256
collision_mask = 192
health = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CapsuleShape2D_ix582")

[node name="Shooter" parent="." node_paths=PackedStringArray("left_marker", "right_marker", "up_marker", "down_marker") instance=ExtResource("4_h106r")]
collision_layer = 512
collision_mask = 32
left_marker = NodePath("LeftMarker2D")
right_marker = NodePath("RightMarker2D")
up_marker = NodePath("UpMarker2D")
down_marker = NodePath("DownMarker2D")

[node name="LeftMarker2D" type="Marker2D" parent="Shooter"]
position = Vector2(-36, -14)

[node name="RightMarker2D" type="Marker2D" parent="Shooter"]
position = Vector2(22, -15)

[node name="UpMarker2D" type="Marker2D" parent="Shooter"]
position = Vector2(-8, -41)

[node name="DownMarker2D" type="Marker2D" parent="Shooter"]
position = Vector2(-7, 13)

[node name="Health" parent="." instance=ExtResource("5_iguai")]
max_health = 3

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_jtf3n")
}

[node name="HealthBar" parent="." instance=ExtResource("11_mr6mk")]
offset_left = -11.0
offset_top = -37.0
offset_right = 9.0
offset_bottom = -34.0

[node name="PlayerTrace" type="ShapeCast2D" parent="."]
position = Vector2(0, -16)
rotation = -1.5708
shape = SubResource("RectangleShape2D_37lhs")
target_position = Vector2(0, 300)
max_results = 2

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true
radius = 20.0

[node name="TrackingTimer" type="Timer" parent="NavigationAgent2D"]
wait_time = 0.1
autostart = true

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -15)
scale = Vector2(0.355469, 0.355469)
color = Color(0.999987, 0.335532, 0.269612, 1)
energy = 0.5
texture = ExtResource("2_vk54n")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="NavigationAgent2D/TrackingTimer" to="." method="_on_tracking_timer_timeout"]
